vaapidecode: only expose profile in caps for GStreamer >= 1.6.

This is a workaround for older GStreamer versions that wouldn't get
the latest improvements from git master (1.6) branch for videoparsers.

https://bugzilla.gnome.org/show_bug.cgi?id=739715